<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="division">/</string>
    <string name="power">a^b</string>
    <string name="plus">+</string>
    <string name="sine">sin(x)</string>
    <string name="cosine">cos(x)</string>
    <string name="tangent">tan(x)</string>
    <string name="natural_log">ln(x)</string>
    <string name="log_x">log(x)</string>
</resources>